--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
     "@fortawesome/fontawesome-free": "5.12.1",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.13",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
     "autocannon": "4.6.0",
     "bulma": "0.8.0",
     "commitizen": "4.0.3",
@@ -38,6 +44,8 @@
     "stylelint-declaration-block-no-ignored-properties": "2.5.0",
     "stylelint-order": "5.0.0",
     "to-mock": "1.6.2",
+    "ts-jest": "^25.5.1",
+    "typescript": "^4.5.5",
     "verdaccio": "4.5.1"
   },
   "scripts": {
@@ -52,7 +60,7 @@
     "release:publish": "lerna publish from-git --yes",
     "release:devtools": "npm run publish-webstore --prefix ./packages/devtools",
     "lint:cmd": "eslint -c ./.eslintrc.js --ignore-path ./.eslintignore",
-    "lint": "npm run lint:cmd -- './**/*.{js,jsx}'",
+    "lint": "npm run lint:cmd -- './**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "npm run lint -- --fix",
     "stylelint": "stylelint './**/*.less'",
     "stylelint:fix": "npm run stylelint -- --fix",
