--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp": "4.0.2",
     "gulp-change": "1.0.2",
     "gulp-rename": "2.0.0",
+    "gulp-typescript": "^6.0.0-alpha.1",
     "husky": "4.2.3",
     "jest": "25.1.0",
     "jsdoc-to-markdown": "5.0.3",
@@ -35,6 +36,7 @@
     "lint-staged": "10.0.8",
     "lunr": "2.3.8",
     "map-stream": "0.0.7",
+    "merge-stream": "^2.0.0",
     "postcss": "8.4.5",
     "postcss-less": "6.0.0",
     "prettier": "2.5.1",
