--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -44,6 +44,7 @@
     "bundle-stats-webpack-plugin": "^3.2.4",
     "chalk": "^4.1.2",
     "cli-highlight": "^2.1.11",
+    "cli-progress": "^3.10.0",
     "compression-webpack-plugin": "^9.2.0",
     "copy-webpack-plugin": "^10.2.4",
     "core-js": "^3.21.0",
@@ -74,6 +75,7 @@
   },
   "devDependencies": {
     "@ima/server": "^17.12.2",
+    "@types/cli-progress": "^3.9.2",
     "@types/express": "^4.17.13",
     "@types/mini-css-extract-plugin": "^2.5.1",
     "@types/nodemon": "^1.19.1",
