--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -50,7 +50,7 @@
     "core-js": "^3.21.1",
     "css-loader": "^6.6.0",
     "css-minimizer-webpack-plugin": "^3.4.1",
-    "fast-glob": "^3.2.11",
+    "globby": "^11.0.4",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "messageformat": "^2.3.0",
