--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -38,6 +38,7 @@
     "@babel/preset-react": "^7.16.7",
     "@gatsbyjs/webpack-hot-middleware": "^2.25.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
+    "@swc/core": "^1.2.141",
     "anser": "^2.1.1",
     "babel-loader": "^8.2.3",
     "better-opn": "^3.0.2",
@@ -64,8 +65,10 @@
     "pretty-bytes": "^5.6.0",
     "pretty-ms": "^7.0.1",
     "react-refresh": "^0.11.0",
+    "regenerator-runtime": "^0.13.9",
     "schema-utils": "^4.0.0",
     "svgo-loader": "^3.0.0",
+    "swc-loader": "^0.1.15",
     "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-dev-middleware": "^5.3.1",
