--- a/packages/create-ima-app/template/package.json
+++ b/packages/create-ima-app/template/package.json
@@ -6,7 +6,7 @@
     "test": "jest --config jest.conf.json",
     "lint": "eslint --fix './**/*.{js,jsx}'",
     "dev": "ima dev",
-    "build": "ima build",
+    "build": "NODE_ENV=production ima build",
     "start": "NODE_ENV=production node server/server.js"
   },
   "keywords": [
