--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
     "@fortawesome/fontawesome-free": "5.12.1",
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.1",
     "@types/node": "^17.0.10",
     "@types/webpack": "^5.28.0",
     "@types/webpack-env": "^1.16.3",
@@ -38,6 +41,7 @@
     "postcss": "8.4.5",
     "postcss-less": "6.0.0",
     "prettier": "2.5.1",
+    "rollup": "^2.68.0",
     "stylelint": "14.2.0",
     "stylelint-config-css-modules": "2.3.0",
     "stylelint-config-standard": "24.0.0",
