--- a/packages/hmr-client/package.json
+++ b/packages/hmr-client/package.json
@@ -11,18 +11,14 @@
   "main": "./dist/fastRefreshClient.cjs",
   "types": "./dist/types.d.ts",
   "scripts": {
-    "dev": "rollup --config --watch",
-    "build": "rollup --config"
+    "dev": "../../node_modules/.bin/rollup --config --watch",
+    "build": "../../node_modules/.bin/rollup --config"
   },
   "author": "Jan Šimeček",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-typescript": "^8.3.0",
     "@types/lodash.debounce": "^4.0.6",
     "lodash.debounce": "^4.0.8",
-    "rollup": "^2.66.1",
     "rollup-plugin-html-string": "^1.0.1"
   }
 }
