--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     }
   },
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": "npm run lint",
-    "**/*.{css,less}": "npm run stylelint"
+    "**/*.{js,jsx,ts,tsx}": "eslint './**/*.{js,jsx,ts,tsx}'",
+    "**/*.{css,less}": "stylelint './**/*.less'"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
@@ -63,9 +63,6 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-typescript": "^8.3.1",
-    "@types/node": "^17.0.21",
-    "@types/webpack": "^5.28.0",
-    "@types/webpack-env": "^1.16.3",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "autocannon": "^7.7.1",
@@ -85,7 +82,7 @@
     "gulp": "4.0.2",
     "gulp-change": "1.0.2",
     "gulp-rename": "2.0.0",
-    "husky": "^7.0.0",
+    "husky": "^7.0.4",
     "jest": "^26.6.3",
     "jsdoc-to-markdown": "5.0.3",
     "jsdom": "^19.0.0",
@@ -108,8 +105,12 @@
     "turbo": "^1.1.6",
     "typescript": "^4.6.2",
     "verdaccio": "^5.8.0",
-    "webpack": "^5.69.1",
-    "webpack-cli": "^4.9.2"
+    "webpack": "^5.70.0",
+    "webpack-nano": "^1.1.1"
+  },
+  "engines": {
+    "node": ">=16",
+    "npm": ">=8"
   },
   "packageManager": "npm@8.5.0"
 }
