--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -38,7 +38,6 @@
     "@ima/hmr-client": "^17.12.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "@swc/core": "^1.2.157",
-    "@types/webpack": "^5.28.0",
     "@types/yargs": "^17.0.9",
     "babel-loader": "^8.2.3",
     "better-opn": "^3.0.2",
@@ -79,8 +78,10 @@
   "devDependencies": {
     "@types/cli-progress": "^3.9.2",
     "@types/express": "^4.17.13",
+    "@types/node": "^17.0.21",
     "@types/nodemon": "^1.19.1",
     "@types/webpack-bundle-analyzer": "^4.4.1",
+    "@types/webpack-env": "^1.16.3",
     "@types/webpack-hot-middleware": "^2.25.6"
   },
   "peerDependencies": {
