--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -20,8 +20,8 @@
   "author": "Jan Šimeček <jan.simecek@firma.seznam.cz>",
   "main": "./dist/overlay.js",
   "scripts": {
-    "build": "NODE_ENV=production webpack",
-    "dev": "NODE_ENV=development webpack --watch",
+    "build": "NODE_ENV=production wp",
+    "dev": "NODE_ENV=development wp --watch",
     "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "stylelint": "stylelint './**/*.less'"
   },
@@ -47,10 +47,7 @@
     "source-map": "^0.7.3",
     "stacktrace-parser": "^0.1.10",
     "style-loader": "^3.3.1",
-    "ts-loader": "^9.2.8",
-    "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "ts-loader": "^9.2.8"
   },
   "publishConfig": {
     "access": "public",
