--- a/packages/hmr-client/package.json
+++ b/packages/hmr-client/package.json
@@ -41,5 +41,11 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
+  },
+  "devDependencies": {
+    "@types/webpack-env": "^1.16.3"
+  },
+  "peerDependencies": {
+    "webpack": "^5.70.0"
   }
 }
