--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -38,6 +38,7 @@
     "@ima/hmr-client": "^17.12.3",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.5",
     "@swc/core": "1.2.163",
+    "ajv": "8.11.0",
     "babel-loader": "8.2.4",
     "better-opn": "3.0.2",
     "bundle-stats-webpack-plugin": "3.3.5",
@@ -73,7 +74,6 @@
     "yargs": "17.4.0"
   },
   "devDependencies": {
-    "@types/yargs": "17.0.9",
     "@types/cli-progress": "3.9.2",
     "@types/express": "4.17.13",
     "@types/node": "17.0.23",
@@ -81,6 +81,7 @@
     "@types/webpack-bundle-analyzer": "4.4.1",
     "@types/webpack-env": "1.16.3",
     "@types/webpack-hot-middleware": "2.25.6",
+    "@types/yargs": "17.0.9",
     "express": "^4.17.3",
     "express-static-gzip": "^2.1.5"
   },
