--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -49,6 +49,8 @@
     "core-js": "3.21.1",
     "css-loader": "6.7.1",
     "css-minimizer-webpack-plugin": "3.4.1",
+    "express": "^4.17.3",
+    "express-static-gzip": "^2.1.5",
     "globby": "11.1.0",
     "less": "4.1.2",
     "less-loader": "10.2.0",
@@ -81,14 +83,10 @@
     "@types/webpack-bundle-analyzer": "4.4.1",
     "@types/webpack-env": "1.16.3",
     "@types/webpack-hot-middleware": "2.25.6",
-    "@types/yargs": "17.0.9",
-    "express": "^4.17.3",
-    "express-static-gzip": "^2.1.5"
+    "@types/yargs": "17.0.9"
   },
   "peerDependencies": {
-    "@ima/server": ">=17.0.0",
-    "express": "^4.17.3",
-    "express-static-gzip": "^2.1.5"
+    "@ima/server": ">=17.0.0"
   },
   "publishConfig": {
     "access": "public",
