--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -8,7 +8,7 @@
     "version:patch": "npm --no-git-tag-version version patch",
     "version:minor": "npm --no-git-tag-version version minor",
     "version:major": "npm --no-git-tag-version version major",
-    "postversion": "VERSION=\"$(npx -c 'echo \"$npm_package_version\"')\" && git add package.json package-lock.json && git commit -m 'chore(release-devtools): publish' && git tag -a -m 'devtools-v$VERSION' devtools-v$VERSION && git push --follow-tags",
+    "postversion": "VERSION=\"$(npx -c 'echo \"$npm_package_version\"')\" && git add package.json package-lock.json && git commit -m 'chore(release-devtools): publish' && git tag -a -m \"devtools-v$VERSION\" devtools-v$VERSION && git push --follow-tags",
     "publish-webstore": "npm run build && npm run upload",
     "upload": "webstore upload --source ./dist --auto-publish",
     "test": "../../node_modules/.bin/jest --no-watchman -c jest.conf.js",
