--- a/package.json
+++ b/package.json
@@ -121,8 +121,7 @@
     "typescript": "^4.6.2",
     "verdaccio": "^5.8.0",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-merge": "^5.8.0"
+    "webpack-nano": "^1.1.1"
   },
   "engines": {
     "node": ">=16",
