--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.28.0",
     "fs-extra": "8.1.0",
+    "get-source": "2.0.12",
     "git-cz": "4.3.1",
     "gulp": "4.0.2",
     "gulp-change": "1.0.2",
     "gulp-rename": "2.0.0",
-    "gulp-typescript": "^6.0.0-alpha.1",
+    "gulp-sourcemaps": "3.0.0",
+    "gulp-typescript": "6.0.0-alpha.1",
     "husky": "4.2.3",
     "jest": "25.1.0",
     "jsdoc-to-markdown": "5.0.3",
