--- a/packages/create-ima-app/template/package.json
+++ b/packages/create-ima-app/template/package.json
@@ -2,7 +2,7 @@
   "name": "@ima/skeleton",
   "version": "0.1.0",
   "scripts": {
-    "test": "jest --config jest.config.json",
+    "test": "jest",
     "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "dev": "ima dev",
     "build": "NODE_ENV=production ima build",
@@ -19,14 +19,15 @@
     "@babel/preset-react": "^7.16.7",
     "@ima/cli": "^17.12.3",
     "@swc/jest": "^0.2.20",
+    "@wojtekmaj/enzyme-adapter-react-17": "0.6.6",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^26.1.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "prettier": "^2.6.0"
   },
