--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@fortawesome/fontawesome-free": "5.12.1",
@@ -116,7 +117,6 @@
     "stylelint-declaration-block-no-ignored-properties": "2.5.0",
     "stylelint-order": "5.0.0",
     "to-mock": "1.6.2",
-    "ts-loader": "^9.2.8",
     "turbo": "^1.2.1",
     "typescript": "^4.6.2",
     "verdaccio": "^5.8.0",
