--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
     "typescript": "^4.6.2",
     "verdaccio": "^5.8.0",
     "webpack": "^5.72.0",
-    "webpack-nano": "^1.1.1"
+    "webpack-cli": "^4.9.2"
   },
   "engines": {
     "node": ">=16",
