--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -27,8 +27,8 @@
   ],
   "main": "dist/main.js",
   "scripts": {
-    "build": "NODE_ENV=production wp",
-    "dev": "NODE_ENV=development wp --watch",
+    "build": "NODE_ENV=production webpack",
+    "dev": "NODE_ENV=development webpack --watch",
     "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "publish-webstore": "npm run build && npm run upload",
     "stylelint": "stylelint './**/*.less'",
