--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -20,8 +20,8 @@
   "author": "Jan Šimeček <jan.simecek@firma.seznam.cz>",
   "main": "./dist/js/overlay.js",
   "scripts": {
-    "build": "NODE_ENV=production wp",
-    "dev": "NODE_ENV=development wp --watch",
+    "build": "NODE_ENV=production webpack",
+    "dev": "NODE_ENV=development webpack --watch",
     "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "stylelint": "stylelint './**/*.less'"
   },
