--- a/packages/create-ima-app/package.json
+++ b/packages/create-ima-app/package.json
@@ -2,6 +2,7 @@
   "name": "create-ima-app",
   "version": "17.12.3",
   "description": "Create a IMA.js App easily.",
+  "type": "module",
   "keywords": [
     "IMA.js",
     "Isomorphic",
@@ -42,10 +43,8 @@
     "preversion": "npm test"
   },
   "dependencies": {
-    "chalk": "^4.1.2",
-    "execa": "^5.1.1",
-    "fs-extra": "^10.0.1",
-    "yargs": "^17.3.1"
+    "chalk": "^5.0.1",
+    "fs-extra": "^10.1.0"
   },
   "publishConfig": {
     "access": "public",
