--- a/packages/create-ima-app/template/package.json
+++ b/packages/create-ima-app/template/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-react": "^7.16.7",
+    "@ima/cli": "^17.12.3",
     "@swc/jest": "^0.2.20",
     "@wojtekmaj/enzyme-adapter-react-17": "0.6.6",
     "enzyme": "^3.11.0",
