--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -49,6 +49,7 @@
     "core-js": "^3.22.4",
     "css-loader": "6.7.1",
     "css-minimizer-webpack-plugin": "3.4.1",
+    "ejs": "^3.1.7",
     "express": "^4.18.1",
     "express-static-gzip": "^2.1.6",
     "globby": "11.1.0",
@@ -75,6 +76,7 @@
   },
   "devDependencies": {
     "@types/cli-progress": "3.9.2",
+    "@types/ejs": "^3.1.0",
     "@types/express": "4.17.13",
     "@types/node": "^17.0.31",
     "@types/nodemon": "1.19.1",
