--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -29,59 +29,59 @@
     "lint": "eslint './**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
-    "@babel/core": "^7.17.10",
-    "@babel/preset-env": "^7.17.10",
-    "@babel/preset-react": "7.16.7",
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
     "@gatsbyjs/webpack-hot-middleware": "2.25.2",
     "@ima/dev-utils": "^18.0.0-rc.0",
     "@ima/error-overlay": "^18.0.0-rc.0",
     "@ima/hmr-client": "^18.0.0-rc.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.5.5",
-    "@swc/core": "^1.2.179",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@swc/core": "^1.2.196",
     "ajv": "8.11.0",
     "babel-loader": "^8.2.5",
     "better-opn": "3.0.2",
     "bundle-stats-webpack-plugin": "^3.3.8",
     "chalk": "4.1.2",
-    "cli-progress": "^3.11.0",
-    "compression-webpack-plugin": "9.2.0",
-    "copy-webpack-plugin": "10.2.4",
-    "core-js": "^3.22.4",
+    "cli-progress": "^3.11.1",
+    "compression-webpack-plugin": "^10.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "core-js": "^3.22.7",
     "css-loader": "6.7.1",
-    "css-minimizer-webpack-plugin": "3.4.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
-    "express-static-gzip": "^2.1.6",
+    "express-static-gzip": "^2.1.7",
     "globby": "11.1.0",
     "less": "4.1.2",
-    "less-loader": "10.2.0",
+    "less-loader": "^11.0.0",
     "messageformat": "2.3.0",
     "mini-css-extract-plugin": "2.6.0",
     "nodemon": "^2.0.16",
     "open-editor": "3.0.0",
-    "postcss": "^8.4.13",
+    "postcss": "^8.4.14",
     "postcss-flexbugs-fixes": "5.0.2",
-    "postcss-loader": "6.2.1",
-    "postcss-preset-env": "^7.5.0",
+    "postcss-loader": "^7.0.0",
+    "postcss-preset-env": "^7.6.0",
     "pretty-bytes": "5.6.0",
     "pretty-ms": "7.0.1",
     "react-refresh": "^0.13.0",
     "regenerator-runtime": "0.13.9",
     "schema-utils": "4.0.0",
-    "swc-loader": "^0.2.0",
-    "webpack": "^5.72.0",
+    "swc-loader": "^0.2.1",
+    "webpack": "^5.72.1",
     "webpack-bundle-analyzer": "4.5.0",
-    "webpack-dev-middleware": "5.3.1",
-    "yargs": "^17.4.1"
+    "webpack-dev-middleware": "^5.3.3",
+    "yargs": "^17.5.1"
   },
   "devDependencies": {
-    "@types/cli-progress": "3.9.2",
+    "@types/cli-progress": "^3.11.0",
     "@types/ejs": "^3.1.0",
     "@types/express": "4.17.13",
-    "@types/node": "^17.0.31",
+    "@types/node": "^17.0.36",
     "@types/nodemon": "1.19.1",
     "@types/webpack-bundle-analyzer": "4.4.1",
-    "@types/webpack-env": "^1.16.4",
+    "@types/webpack-env": "^1.17.0",
     "@types/webpack-hot-middleware": "2.25.6",
     "@types/yargs": "^17.0.10"
   },
