--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -28,14 +28,14 @@
   "devDependencies": {
     "@ima/dev-utils": "^18.0.0-rc.0",
     "@types/prismjs": "^1.26.0",
-    "@types/react": "^17.0.40",
-    "@types/react-dom": "^17.0.13",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
     "clsx": "^1.1.1",
-    "compression-webpack-plugin": "^9.2.0",
-    "prismjs": "^1.27.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "source-map": "^0.7.3",
+    "compression-webpack-plugin": "^10.0.0",
+    "prismjs": "^1.28.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "source-map": "0.8.0-beta.0",
     "stacktrace-parser": "^0.1.10"
   },
   "publishConfig": {
