--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -46,7 +46,7 @@
     "cli-progress": "^3.11.1",
     "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^11.0.0",
-    "core-js": "^3.22.7",
+    "core-js": "3.22.7",
     "css-loader": "6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "ejs": "^3.1.7",
