--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -49,7 +49,7 @@
     "@ima/helpers": "^18.0.0-rc.0",
     "classnames": "^2.3.1",
     "memoize-one": "^6.0.0",
-    "node-fetch": "^2.6.7"
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
     "@size-limit/preset-big-lib": "^7.0.8",
