--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -53,6 +53,7 @@
     "express": "^4.18.1",
     "express-static-gzip": "^2.1.7",
     "globby": "11.1.0",
+    "kill-port": "^1.6.1",
     "less": "4.1.2",
     "less-loader": "^11.0.0",
     "messageformat": "2.3.0",
