--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://turborepo.org/schema.json",
-  "baseBranch": "origin/master",
+  "baseBranch": "origin/next",
   "pipeline": {
     "build": {
       "dependsOn": ["^build"]
