--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -16,8 +16,12 @@
   },
   "license": "MIT",
   "author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
-  "main": "index.js",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "browser": "./dist/index.js",
   "scripts": {
+    "build": "rollup --config",
+    "dev": "rollup --config --watch",
     "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "test": "jest -c jest.config.js",
     "preversion": "npm test"
