--- a/packages/create-ima-app/template/package.json
+++ b/packages/create-ima-app/template/package.json
@@ -19,9 +19,9 @@
     "@babel/preset-react": "^7.16.7",
     "@ima/cli": "18.0.0-rc.2",
     "@swc/jest": "^0.2.20",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
     "@wojtekmaj/enzyme-adapter-react-17": "0.6.6",
-    "enzyme": "^3.11.0",
-    "enzyme-to-json": "^3.6.2",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^26.1.1",
@@ -29,7 +29,8 @@
     "eslint-plugin-react": "^7.29.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
-    "prettier": "^2.6.0"
+    "prettier": "^2.6.0",
+    "react-testing-library-shallow": "0.0.1"
   },
   "dependencies": {
     "@ima/core": "18.0.0-rc.1",
