--- a/website/package.json
+++ b/website/package.json
@@ -23,7 +23,10 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.0-rc.1"
+    "@docusaurus/module-type-aliases": "2.0.0-rc.1",
+    "jsdoc-to-markdown": "^7.1.1",
+    "mermaid": "^9.1.3",
+    "remark-mermaid": "^0.2.0"
   },
   "browserslist": {
     "production": [
