--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
   "workspaces": [
-    "./packages/website",
+    "./website",
     "./packages/cli",
     "./packages/core",
     "./packages/create-ima-app",
@@ -63,7 +63,6 @@
     "@babel/preset-typescript": "^7.17.12",
     "@commitlint/cli": "^17.0.1",
     "@commitlint/config-conventional": "^17.0.0",
-    "@fortawesome/fontawesome-free": "5.12.1",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -74,7 +73,6 @@
     "@typescript-eslint/parser": "^5.27.0",
     "autocannon": "^7.9.0",
     "babel-jest": "^27.5.1",
-    "bulma": "0.8.0",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
     "commitizen": "^4.2.4",
@@ -82,7 +80,6 @@
     "core-js": "^3.21.1",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
-    "del": "^6.1.1",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
@@ -93,14 +90,11 @@
     "git-cz": "^4.9.0",
     "husky": "^7.0.4",
     "jest": "^26.6.3",
-    "jsdoc-to-markdown": "5.0.3",
     "jsdom": "^19.0.0",
     "lerna": "^5.0.0",
     "less": "^4.1.2",
     "less-loader": "^11.0.0",
     "lint-staged": "^12.4.3",
-    "lunr": "^2.3.9",
-    "map-stream": "0.0.7",
     "mini-css-extract-plugin": "^2.6.0",
     "postcss": "^8.4.12",
     "postcss-less": "6.0.0",
