--- a/website/package.json
+++ b/website/package.json
@@ -6,7 +6,7 @@
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build:api": "node ./scripts/jsdoc2md.mjs",
-    "build": "docusaurus build",
+    "build": "npm run build:api; docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -25,10 +25,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.0-rc.1",
-    "jsdoc-to-markdown": "^7.1.1",
-    "mermaid": "^9.1.3",
-    "remark-mermaid": "^0.2.0"
+    "jsdoc-to-markdown": "^7.1.1"
   },
   "browserslist": {
     "production": [
