--- a/website/package.json
+++ b/website/package.json
@@ -12,6 +12,7 @@
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
+    "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids"
   },
@@ -20,6 +21,7 @@
     "@docusaurus/preset-classic": "2.0.0-rc.1",
     "@docusaurus/remark-plugin-npm2yarn": "^2.0.0-rc.1",
     "@mdx-js/react": "^1.6.22",
+    "akar-icons": "^1.9.18",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
