--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -46,7 +46,7 @@
     "cli-progress": "^3.11.1",
     "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^11.0.0",
-    "core-js": "3.22.7",
+    "core-js": "3.24.0",
     "css-loader": "6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "ejs": "^3.1.7",
@@ -54,10 +54,10 @@
     "express-static-gzip": "^2.1.7",
     "globby": "11.1.0",
     "kill-port": "^1.6.1",
-    "less": "4.1.2",
+    "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "messageformat": "2.3.0",
-    "mini-css-extract-plugin": "2.6.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "nodemon": "^2.0.16",
     "open-editor": "3.0.0",
     "postcss": "^8.4.14",
@@ -66,22 +66,21 @@
     "postcss-preset-env": "^7.6.0",
     "pretty-bytes": "5.6.0",
     "pretty-ms": "7.0.1",
-    "react-refresh": "^0.13.0",
+    "react-refresh": "^0.14.0",
     "regenerator-runtime": "0.13.9",
     "schema-utils": "4.0.0",
     "swc-loader": "^0.2.1",
-    "webpack": "^5.72.1",
+    "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "4.5.0",
     "webpack-dev-middleware": "^5.3.3",
-    "whatwg-fetch": "^3.6.2",
     "yargs": "^17.5.1"
   },
   "devDependencies": {
     "@types/cli-progress": "^3.11.0",
     "@types/ejs": "^3.1.0",
     "@types/express": "4.17.13",
-    "@types/node": "^17.0.36",
-    "@types/nodemon": "1.19.1",
+    "@types/node": "^18.6.1",
+    "@types/nodemon": "^1.19.2",
     "@types/webpack-bundle-analyzer": "4.4.1",
     "@types/webpack-env": "^1.17.0",
     "@types/webpack-hot-middleware": "2.25.6",
